--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -63,7 +63,7 @@
 
 //OnBoarding gambiarrento 4
 "OnBoarding4_line1" = "Salve as suas";
-"OnBoarding4_line2" = "criações";
+"OnBoarding4_line2" = "criações na";
 "OnBoarding4_line3" = "para";
 "OnBoarding4_line4" = "revisitá-las";
 "OnBoarding4_line5" = "quando quiser";
