Implements single activity view

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -21,6 +21,10 @@
 //Gallery Screen
 "gallery" = "Your gallery";
 
+//Single activity screen
+"theme_was" = "The theme was";
+"activity_from" = "Activity from";
+
 
 //Activity Screen
 "Acitivy" = "Activity";
