--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -21,6 +21,10 @@
 //Gallery Screen
 "gallery" = "Sua galeria";
 
+//Single activity screen
+"theme_was" = "O tema era";
+"activity_from" = "Atividade de";
+
 
 //Activity Screen
 "Acitivy" = "Atividade";
