Refactors single activity view. Starts to implement the functionality from the trash button

--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -22,7 +22,7 @@
 "gallery" = "Sua galeria";
 
 //Single activity screen
-"theme_was" = "O tema era";
+"theme_was" = "O tema foi";
 "activity_from" = "Atividade de";
 
 
