add button on the last screen

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -68,6 +68,7 @@
 "OnBoarding4_line4" = "whenever";
 "OnBoarding4_line5" = "you want";
 "OnBoarding4_image1" = "galery-text";
+"button_text" = "Let's start!";
 
 
 
