--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -68,6 +68,7 @@
 "OnBoarding4_line4" = "revisitá-las";
 "OnBoarding4_line5" = "quando quiser";
 "OnBoarding4_image1" = "galeria-text";
+"button_text" = "Vamos começar!";
 
 
 
