--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 //Home Screen
 "daily_theme" = "Tema do dia";
 "good_morning" = "Bom dia!";
-"good_afternoom" = "Boa tarde!";
+"good_afternoon" = "Boa tarde!";
 "good_night" = "Boa noite!";
 "activities" = "Atividade";
 //Sequence - Home Screen
@@ -27,23 +27,30 @@
 
 
 //Activity Screen
-"activy" = "Atividade";
+"activity" = "Atividade";
 "current_sequence" = "Sequência Atual";
 "longest_sequence" = "Maior sequência";
 "days" = "dias";
 "daily_reminder" = "Lembrete diário";
-"hour" = "Hora";
+"time" = "Horário";
 
 
-//Theme of the day Screen
+//Theme Screen
 "theme" = "Tema";
 "activity_of_today" = "Atividade de hoje";
 "benefits" = "Benefícios";
-//button insert media - Theme of the day Screen
+//button insert media - Theme Screen
 "button_media" = "Adicionar mídia";
 "button_take_a_picture" = "Tirar foto ou vídeo";
 "button_choose_media" = "Escolher foto ou vídeo";
+"art_sent" = "Arte enviada";
+"cancel" = "Cancelar";
+"confirm" = "Confirmar";
 
+//Single Activity Screen
+"delete_activity" = "Deletar Atividade";
+"delete_question" = "Deseja deletar essa atividade?";
+"delete" = "Deletar";
 
 //OnBoarding gambiarrento 1
 "OnBoarding1_line1" = "Crie todos";
