--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "daily_theme" = "Tema do dia";
 "good_morning" = "Bom dia!";
 "good_afternoon" = "Boa tarde!";
+"good_evening" = "Boa noite!";
 "good_night" = "Boa noite!";
 "activities" = "Atividade";
 //Sequence - Home Screen
