--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -123,6 +123,37 @@
 "description6" = "Get inspired by the elements and colors of Venus dos Trapos and re-signify something/materials by producing a photograph. Come on, whatever is affordable for you!";
 
 
+//dança
+"benefits1" = "Dance brings benefits regardless of why a person chose to dance, whether as a profession, as a physical exercise, as a social integration activity or as a leisure activity.";
+"benefits2" = "People who listened to music had a better immune system response—this is because it stimulated the limbic system of the brain and moderated the response to stressful stimuli.";
+"benefits3" = "Art helps in the development of new talents and skills.";
+"benefits4" = "[A study by the WHO (World Health Organization)]revealed that engaging with art can benefit both physical and mental health. The research pointed out that the arts help to face complex challenges, such as diabetes and obesity, in addition to mental disorders.";
+//Cinema
+"benefits5" = "Art has been a tool for the expression of human beings since antiquity.";
+"benefits6" = "Art is intimately linked to the history and evolution of the human being.";
+"benefits7" = "Music activates the pleasure center of the brain, releasing dopamine, a substance responsible for the sensation of well-being. In other words, music soothes, relaxes and stimulates memory.";
+"benefits8" = "Art is a break, a respite from routine.";
+//literatura
+"benefits9" = "In teenagers who live in urban areas and receive education based on dramaturgy a research reveals that they benefit from being able to make more responsible decisions, in addition to being less exposed to violence.";
+"benefits10" = "The use of art for therapeutic purposes began to be encouraged at the end of the 18th century and is based on different theoretical references, such as psychoanalysis, analytical psychology, gestalt therapy, among other approaches in the field of psychology.";
+"benefits11" = "Art expands the vision and understanding of the world.";
+"benefits12" = "When parents read children's stories before bed, they rest more throughout the night and focus more on school.";
+//hq"31"
+"benefits13" = "Making art teaches that there is more than one solution to the same problem. Art challenges our beliefs and encourages open-ended thinking that creates an environment of creative thinking in problem solving. We stick our kids’ artwork on the fridge to boost their self-esteem. Hanging your latest work of art on the wall can instill the same feelings within you.";
+"benefits14" = "When using the hands to shape the clay, the person does not act mechanically. This allows us to work on flexibility and release tensions, since during the creation process, it is necessary to concentrate on the execution of the task. So, at least for that moment, the person forgets about problems and concentrates on creating a play. The result is stress release, motor domain, self-expression, playful interaction, among other benefits. There are other modalities that can be added to this list. Find one that gives you satisfaction and experience the feeling that only an artistic activity can provide.";
+"benefits15" = "Art can promote self-knowledge.";
+"benefits16" = "Art helps shift your focus away from pain or stressful thoughts;";
+//pintura
+"benefits17" = "Leonardo da Vinci said, “Painting embraces all the ten functions of the eye; that is to say, darkness, light, body and color, shape and location, distance and closeness, motion and rest.” Creating art helps you learn to “see” by concentrating on detail and paying more attention to your environment.";
+"benefits18" = "Those who dedicate themselves to painting (which can be on canvas, fabrics or other options) develop concentration. At the same time it relaxes and improves concentration.";
+"benefits19" = "Art raises attention levels.";
+"benefits20" = "Art stimulates memory.";
+//fotografia
+"benefits21" = "Painting, sculpting, drawing, and photography are relaxing and rewarding hobbies that can lower your stress levels and lead to an overall improvement in well-being. creating art can take your mind off life’s many stresses, at least momentarily. It clears some head space and allows one to focus on the good in life.";
+"benefits22" = "Art is a break, a respite from routine.";
+"benefits23" = "Art also has a positive impact on creativity.";
+"benefits24" = "The act of creating something unique gives us a sense of pleasure and accomplishment.";
+
 
 
 
