--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -115,44 +115,44 @@
 "theme_name6" = "Daily";
 
 
-"description1" = "Explore yellow in your day! Today we have the suggestion for you to dance interpreting a song that reminds you of yellow.";
+"description1" = "Explore yellow in your day! Today we suggest that you dance interpreting a song that reminds you of yellow.";
 "description2" = "Let's travel through the evolution of times, see a movie from the past or about the future, and write about this movie as if you were a famous movie critic. Extra tip: look for fun facts about the film.";
-"description3" = "And who doesn't know the most famous smile in the world?! Enigmatic in a way to get each person to have an interpretation about. Let your mind wander and write a poem, poetry, chronicle, joke, whatever!";
+"description3" = "And who doesn't know the most famous smile in the world?! Enigmatic in a way to get each person to have an interpretation about. Let your mind wander and write a poem, poetry, chronicle, joke, whatever you want!";
 "description4" = "How about choosing one of the different scenes that take place in this painting, and creating a comic book continuing it? Come on!";
-"description5" = "Produce a painting with something you think represents Brazil! It can be green, yellow and blue, or not, you have complete freedom of interpretation!";
+"description5" = "Painting something you think represents Brazil! It can be green, yellow and blue, or not, you have complete freedom of interpretation!";
 "description6" = "Get inspired by the elements and colors of Venus dos Trapos and re-signify something/materials by producing a photograph. Come on, whatever is affordable for you!";
 
 
 //dança
-"benefits1" = "Dance brings benefits regardless of why a person chose to dance, whether as a profession, as a physical exercise, as a social integration activity or as a leisure activity.";
-"benefits2" = "People who listened to music had a better immune system response—this is because it stimulated the limbic system of the brain and moderated the response to stressful stimuli.";
-"benefits3" = "Art helps in the development of new talents and skills.";
-"benefits4" = "[A study by the WHO (World Health Organization)]revealed that engaging with art can benefit both physical and mental health. The research pointed out that the arts help to face complex challenges, such as diabetes and obesity, in addition to mental disorders.";
+"benefits1" = "Dance brings benefits regardless the motivation to dance, whether as a profession, as a physical exercise, as a social integration activity or as a leisure activity.";
+"benefits2" = "People who listen to music have a better immune system response—that's because it stimulates the brain's limbic system and moderate the response to stressful stimuli.";
+"benefits3" = "Art helps with the development of new talents and skills.";
+"benefits4" = "A study by WHO (World Health Organization) revealed that engaging with art can benefit both physical and mental health. The research pointed out that art helps to face complex challenges, such as diabetes and obesity, in addition to mental disorders.";
 //Cinema
 "benefits5" = "Art has been a tool for the expression of human beings since antiquity.";
 "benefits6" = "Art is intimately linked to the history and evolution of the human being.";
-"benefits7" = "Music activates the pleasure center of the brain, releasing dopamine, a substance responsible for the sensation of well-being. In other words, music soothes, relaxes and stimulates memory.";
+"benefits7" = "Music activates the brain's pleasure center, releasing dopamine, a substance responsible for the sensation of well-being. In other words, music soothes, relaxes and stimulates memory.";
 "benefits8" = "Art is a break, a respite from routine.";
 //literatura
-"benefits9" = "In teenagers who live in urban areas and receive education based on dramaturgy a research reveals that they benefit from being able to make more responsible decisions, in addition to being less exposed to violence.";
+"benefits9" = "A research reveals that teenagers who live in urban areas and receive education based on dramaturgy benefit from being able to make more responsible decisions, in addition to being less exposed to violence.";
 "benefits10" = "The use of art for therapeutic purposes began to be encouraged at the end of the 18th century and is based on different theoretical references, such as psychoanalysis, analytical psychology, gestalt therapy, among other approaches in the field of psychology.";
 "benefits11" = "Art expands the vision and understanding of the world.";
-"benefits12" = "When parents read children's stories before bed, they rest more throughout the night and focus more on school.";
+"benefits12" = "When parents read stories to their children before bed, they rest better during the night and focus more on school.";
 //hq"31"
-"benefits13" = "Making art teaches that there is more than one solution to the same problem. Art challenges our beliefs and encourages open-ended thinking that creates an environment of creative thinking in problem solving. We stick our kids’ artwork on the fridge to boost their self-esteem. Hanging your latest work of art on the wall can instill the same feelings within you.";
-"benefits14" = "When using the hands to shape the clay, the person does not act mechanically. This allows us to work on flexibility and release tensions, since during the creation process, it is necessary to concentrate on the execution of the task. So, at least for that moment, the person forgets about problems and concentrates on creating a play. The result is stress release, motor domain, self-expression, playful interaction, among other benefits. There are other modalities that can be added to this list. Find one that gives you satisfaction and experience the feeling that only an artistic activity can provide.";
-"benefits15" = "Art can promote self-knowledge.";
-"benefits16" = "Art helps shift your focus away from pain or stressful thoughts;";
+"benefits13" = "Making art teaches that there is more than one solution to the same problem. Art challenges our beliefs and encourages open-ended thinking that creates an environment of creative thinking in problem solving. Sticking kids’ artwork on the fridge boosts their self-esteem. Hanging your latest work of art on the wall can instill the same feelings in you.";
+"benefits14" = "When using the hands to shape the clay, the person does not act mechanically. This allows us to work on flexibility and release tensions, since, during the creation process, it is necessary to concentrate on the execution of the task. So, at least for the moment, the person forgets about problems and concentrates on creating a art piece. The result is stress release, motor domain, self-expression, playful interaction, among other benefits.";
+"benefits15" = "Art can increase self-knowledge.";
+"benefits16" = "Art helps to shift your focus away from pain or stressful thoughts;";
 //pintura
-"benefits17" = "Leonardo da Vinci said, “Painting embraces all the ten functions of the eye; that is to say, darkness, light, body and color, shape and location, distance and closeness, motion and rest.” Creating art helps you learn to “see” by concentrating on detail and paying more attention to your environment.";
-"benefits18" = "Those who dedicate themselves to painting (which can be on canvas, fabrics or other options) develop concentration. At the same time it relaxes and improves concentration.";
-"benefits19" = "Art raises attention levels.";
+"benefits17" = "Leonardo da Vinci said, “Painting embraces all the ten functions of the eye; that is, darkness, light, body and color, shape and location, distance and closeness, motion and rest.” Creating art helps you to learn how to “see” by concentrating on detail and paying more attention to your environment.";
+"benefits18" = "Those who dedicate themselves to painting (which can be on canvas, fabrics or other options) develop concentration, at the same time it get them more relaxed";
+"benefits19" = "Art increases attention levels.";
 "benefits20" = "Art stimulates memory.";
 //fotografia
-"benefits21" = "Painting, sculpting, drawing, and photography are relaxing and rewarding hobbies that can lower your stress levels and lead to an overall improvement in well-being. creating art can take your mind off life’s many stresses, at least momentarily. It clears some head space and allows one to focus on the good in life.";
-"benefits22" = "Art is a break, a respite from routine.";
-"benefits23" = "Art also has a positive impact on creativity.";
-"benefits24" = "The act of creating something unique gives us a sense of pleasure and accomplishment.";
+"benefits21" = "Painting, sculpting, drawing, and photography are relaxing and rewarding hobbies that can lower stress levels and lead to an overall improvement in well-being. Creating art can take the mind off life’s stress, at least momentarily. This get the thoughts clearer and allows to focus on waht's good in life.";
+"benefits22" = "Art is a break, a break from routine.";
+"benefits23" = "Art has a positive impact on creativity.";
+"benefits24" = "Creating something unique gives the sensation of pleasure and accomplishment.";
 
 
 
